hphp/hack/test/typecheck/enum_class_label/memoized_bad_arity2.php.rust_elab.exp
File "memoized_bad_arity2.php", line 3, characters 43-46:
`__Memoize` takes 2 arguments when using `#SoftMakeICInaccessible`. (Parsing[1002])
File "memoized_bad_arity2.php", line 3, characters 13-35:
Enum class label/member mismatch (Typing[4110])
  File "memoized_bad_arity2.php", line 3, characters 13-35:
  Unexpected enum class label: `#SoftMakeICInaccessible`
